[gd_scene load_steps=39 format=2]

[ext_resource path="res://Interface/CardPuzzle/poker-table.png" type="Texture" id=1]
[ext_resource path="res://Interface/CardPuzzle/card-slot.png" type="Texture" id=2]
[ext_resource path="res://Interface/CardPuzzle/ace-club.png" type="Texture" id=3]
[ext_resource path="res://Interface/CardPuzzle/CardPuzzle.gd" type="Script" id=4]
[ext_resource path="res://Interface/CardPuzzle/seven-diamonds.png" type="Texture" id=5]
[ext_resource path="res://Interface/CardPuzzle/devil-card-transformation.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 43, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 86, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 129, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 172, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 215, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 258, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 301, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 344, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 387, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 430, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 473, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 516, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 559, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 602, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 645, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 688, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 731, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 774, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 817, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 860, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 903, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 946, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 989, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1032, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1075, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1118, 0, 43, 60 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 41, 58 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": false,
"name": "reveal",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "losing",
"speed": 5.0
} ]

[sub_resource type="AnimatedTexture" id=31]
frames = 27
frame_1/delay_sec = 0.0
frame_2/delay_sec = 0.0
frame_3/delay_sec = 0.0
frame_4/delay_sec = 0.0
frame_5/delay_sec = 0.0
frame_6/delay_sec = 0.0
frame_7/delay_sec = 0.0
frame_8/delay_sec = 0.0
frame_9/delay_sec = 0.0
frame_10/delay_sec = 0.0
frame_11/delay_sec = 0.0
frame_12/delay_sec = 0.0
frame_13/delay_sec = 0.0
frame_14/delay_sec = 0.0
frame_15/delay_sec = 0.0
frame_16/delay_sec = 0.0
frame_17/delay_sec = 0.0
frame_18/delay_sec = 0.0
frame_19/delay_sec = 0.0
frame_20/delay_sec = 0.0
frame_21/delay_sec = 0.0
frame_22/delay_sec = 0.0
frame_23/delay_sec = 0.0
frame_24/delay_sec = 0.0
frame_25/delay_sec = 0.0
frame_26/delay_sec = 0.0

[sub_resource type="Animation" id=32]
resource_name = "reveal_winning_card"
length = 3.0
step = 0.333333
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer/CardMat/GridContainer/CardC:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.333333 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 31 ) ]
}

[node name="CardPuzzle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -45.0
margin_right = 160.0
margin_bottom = 45.0
rect_min_size = Vector2( 320, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 55.0
margin_right = 265.0
margin_bottom = 90.0
rect_min_size = Vector2( 210, 90 )
color = Color( 0.113725, 0.188235, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PokerTable" type="NinePatchRect" parent="CenterContainer"]
margin_left = 60.0
margin_top = 5.0
margin_right = 260.0
margin_bottom = 85.0
rect_min_size = Vector2( 200, 80 )
texture = ExtResource( 1 )
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9

[node name="CardMat" type="NinePatchRect" parent="CenterContainer"]
margin_left = 95.0
margin_top = 30.0
margin_right = 225.0
margin_bottom = 60.0
rect_min_size = Vector2( 130, 30 )
texture = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="CenterContainer/CardMat"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 18.1699
margin_top = 0.900787
margin_right = 71.1699
margin_bottom = 29.9008
rect_scale = Vector2( 0.5, 0.5 )
custom_constants/hseparation = 30
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardA" type="TextureRect" parent="CenterContainer/CardMat/GridContainer"]
margin_right = 41.0
margin_bottom = 59.0
texture = ExtResource( 3 )

[node name="CardB" type="TextureRect" parent="CenterContainer/CardMat/GridContainer"]
margin_left = 71.0
margin_right = 112.0
margin_bottom = 59.0
texture = ExtResource( 3 )

[node name="CardC" type="AnimatedSprite" parent="CenterContainer/CardMat/GridContainer"]
position = Vector2( 158.088, 27.7496 )
frames = SubResource( 30 )
animation = "reveal"
frame = 20

[node name="CardRevealTween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/reveal_winning_card = SubResource( 32 )
